<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/title"
            android:text="@string/app_name"></TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_marginLeft="4dp"
            android:layout_height="50dp"
            android:text="@string/on"
            android:layout_marginTop="10dp"
            android:layout_marginRight="4dp"
            android:layout_width="100dp"
            android:focusable="false"
            android:id="@+id/connect_btn"
            android:layout_alignParentTop="true"></Button>
        <Button
            android:layout_height="50dp"
            android:text="@string/off"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_marginRight="45dp"
            android:focusable="false"
            android:id="@+id/disconnect_btn"
            android:layout_toRightOf = "@id/connect_btn"></Button>
        <View
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:id="@+id/connected"
            android:layout_marginTop="10dp"
            android:background="@color/connected_off"
            android:layout_marginRight="8dp"
            android:layout_alignParentTop="true"></View>
        <View
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:layout_marginTop="10dp"
            android:id="@+id/disconnected"
            android:layout_alignParentRight="true"
            android:background="@color/disconnected_on"
            android:layout_marginRight="8dp"
            android:layout_alignParentTop="true"></View>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginLeft="4dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/title"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:id="@+id/rawValue"></TextView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="100dp"
            android:textSize="12sp"
            android:textColor="@color/title"
            android:id="@+id/currentValue"></TextView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="120dp"
            android:textColor="@color/title"
            android:textSize="12sp"
            android:id="@+id/powerValue"></TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginLeft="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/title"
            android:layout_marginTop="5dp"
            android:text="@string/raw"
            android:textSize="12sp"
            android:id="@+id/rawText"></TextView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:textColor="@color/title"
            android:textSize="12sp"
            android:layout_marginLeft="50dp"
            android:text="@string/current"
            android:id="@+id/currentText"></TextView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/title"
            android:layout_marginLeft="70dp"
            android:textSize="12sp"
            android:text="@string/power"
            android:id="@+id/powerText"></TextView>
    </LinearLayout>
    <com.surge.n2d.surge.GraphView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="4"
        />
</LinearLayout>